# etl-plateform-pfe

backend/: .env  pyproject.toml  requirements.txt
backend/apps/accounts/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_alter_user_id.py
backend/apps/auditLog/: admin.py  models.py  serializers.py
backend/apps/core/: admin.py  app.py  models.py  serializers.py  urls.py  views.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/etl/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/etl/migrations/: 0001_initial.py  0002_auto_20260302_1231.py  0003_initial.py
backend/apps/etl/services/: etl_analyzer.py
backend/apps/execution/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/execution/migrations/: 0002_auto_20260302_1231.py  0003_initial.py
backend/apps/execution/services/: execution_engine.py
backend/apps/input_file/: admin.py  apps.py  models.py  serializers.py  urls.py  view.py
backend/apps/input_file/migrations/: 0002_auto_20260302_1231.py  0003_initial.py  0004_alter_inputfile_uploaded_file.py  0005_alter_inputfile_unique_together.py
backend/apps/notification/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/notification/migrations/: 0001_initial.py
backend/apps/output_file/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/output_file/migrations/: 0002_auto_20260302_1231.py  0003_initial.py  (+1 more)
backend/config/: settings.py  urls.py
(+232 files in other folders)
